basic style and visible input comp

--- a/frontend/src/pages/style.less
+++ b/frontend/src/pages/style.less
@@ -1,3 +1,28 @@
+* {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+.container {
+    padding-left: 8em;
+    padding-right: 8em;
+    height: 100vh;
+    text-align: center;
+}
+
+.buttonGroup {
+    display: flex;
+    justify-content: center;
+}
+
+.header {
+    text-align: center;
+    font-size: 3em;
+}
+
+.centerContent {
+    display: flex;
+    justify-content: center;
+}
+
 // .container {
 // 	padding: 20;
 // }
