--- a/frontend/src/pages/style.less
+++ b/frontend/src/pages/style.less
@@ -23,6 +23,18 @@
     justify-content: center;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    // padding: 10px;
+}
+
+.grid-item {
+    // padding: 20px;
+    text-align: center;
+}
+
+
 // .container {
 // 	padding: 20;
 // }
